# poucet

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.sample.toml
.github/workflows/: build.yml
src/: commands.rs  configuration.rs  events.rs  identifiers.rs  main.rs  models.rs
src/commands/: onboarding.rs  ping.rs  setup.rs
