[package]
name = "poucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
once_cell = "1.13.0"
poise = "0.2.2"
redis = "0.21.5"
serde = "1.0.140"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"

[dependencies.serenity]
version = "0.11.4"
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]

[dependencies.tokio]
version = "1.20.0"
features = ["full"]
