[package]
name = "poucet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
derivative = "2.2.0"
poise = "0.5.2"
redis = "0.22.3"
serde = "1.0.152"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "model", "rustls_backend"]

[dependencies.tokio]
version = "1.25.0"
features = ["full"]
